--- a/CV.html
+++ b/CV.html
@@ -15,8 +15,8 @@
                 <div class="column" id="home"><span>Home</span></div><br>
                 <div class="column" id="about"><span>About</span></div><br>
                 <div class="column" id="contact"><span>Contact</span></div><br>
-                <div class="column" id="portfolio"><span>Portfolio</span></div><br>
-                <div class="column" id="services"><span>Services</span></div><br>
+                <div class="column" id="portfolio"><span>Web Projects</span></div><br>
+                <div class="column" id="services"><span>App Projects</span></div><br>
             </div>
         </div>
         <div class="row back-items">
@@ -82,14 +82,14 @@
                 <div class="col-lg-6 info">
                     <div class="data">
                         <h5>
-                            Hii! My Name is Shashank Kumar.I am a Web developer and Designer.
+                            Hii! My Name is Shashank Kumar.I am a Web & app developer.
                             I'm basically Belongs to Moradabad and I'm Complete my 10th ,12th
                             for ICSC and ICS board and Complete My Graduation From CCS University
                             and Now I'm currently persuing post-graduation From AKTU University.Thankyou.
                         </h5>
                         <div class="btnclass">
                             <p id="download"><span>Download CV</span></p>
-                            <p id=""><span>Hire Me</span></p>
+                            <p id="HireBtn"><span>Hire Me</span></p>
                         </div>
                     </div>
                 </div>
@@ -232,6 +232,125 @@
                 </div>
                 <div class="offset-1"></div>
             </div>
+    
+
+        </div>
+        <div class="work" id="work">
+            <div class="row header">
+                <div class="offset-1"></div>
+                <div class="col-1 mr-auto logo"><span>S</span></div>
+                <div class="col-1 Menu-bar"><span><i class="fas fa-bars"></i></span></div>
+                <div class="offset-1"></div>
+            </div>
+            <div class="row title">
+                <div class="offset-1"></div>
+                <div class="col"><h1 style="text-align: center"><u>Projects</u></h1></div>
+                <div class="offset-1"></div>
+            </div>
+            <div class="row projects">
+                <div class="offset-1"></div>
+                <div class="col-lg-1 languages">
+                    <div class="languages-name 0">PHP</div>
+                    <div class="languages-name 1">JavaScript</div>
+                    <div class="languages-name 2">Bootstrap</div>
+                    <div class="languages-name 3">HTML</div>
+                    <div class="languages-name 4">Python</div>
+                    <div class="languages-name 5">CSS</div>
+                </div>
+                <div class="col-lg-9 projects-name">
+                    <div class="projects-data">
+                        <div class="project project1" id="1">
+                            <h1>Pepsi</h1>
+                            <div class="img"><img src="projectImg\pepsi.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div>
+                        <div class="projects-data">
+                            <div class="project project2" id="2">
+                                <h1>Student Management System</h1>
+                                <div class="img"><img src="projectImg\sms.png" alt=""></div>
+                                <button class="source-code">Source Code</button>
+                              <a href="" class="link">Open</a>  
+                            </div>
+                        </div>
+                    <div class="projects-data">
+                        <div class="project project3" id="3">
+                            <h1>Fruits</h1>
+                            <div class="img"><img src="projectImg\fruits.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div><div class="projects-data">
+                        <div class="project project4" id="4">
+                            <h1>Parking Slot</h1>
+                            <div class="img"><img src="projectImg\Parking.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div><div class="projects-data">
+                        <div class="project project5" id="5">
+                            <h1>Tik-Tak-Toe</h1>
+                            <div class="img"><img src="projectImg\tiktaktoe.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div><div class="projects-data">
+                        <div class="project project6" id="6">
+                            <h1>Netflix</h1>
+                            <div class="img"><img src="projectImg\mulan.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div><div class="projects-data">
+                        <div class="project project7" id="7">
+                            <h1>StarBucks</h1>
+                            <div class="img"><img src="projectImg\starbuks.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div><div class="projects-data">
+                        <div class="project project8" id="8">
+                            <h1>Quote Machine</h1>
+                            <div class="img"><img src="projectImg\quotemachine.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div><div class="projects-data">
+                        <div class="project project9" id="9">
+                            <h1>Amity</h1>
+                            <div class="img"><img src="projectImg\amity.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div><div class="projects-data">
+                        <div class="project project10" id="10">
+                            <h1>Documentation</h1>
+                            <div class="img"><img src="projectImg\documentation.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div>
+                    <div class="projects-data">
+                        <div class="project project11" id="11">
+                            <h1>NVIDIA</h1>
+                            <div class="img"><img src="projectImg\nvidia.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div>
+                    <div class="projects-data">
+                        <div class="project project12" id="12">
+                            <h1>Tribute</h1>
+                            <div class="img"><img src="projectImg\tribute.png" alt=""></div>
+                            <button class="source-code">Source Code</button>
+                          <a href="" class="link">Open</a>  
+                        </div>
+                    </div>
+                </div>
+                <div class="offset-1"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
