web pages editing

--- a/index.html
+++ b/index.html
@@ -262,72 +262,72 @@
                         <div class="project project1" id="1">
                             <h1>Pepsi</h1>
                             <div class="img"><img src="projectImg\pepsi.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/pepsi">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/pepsi/" class="link">Open</a>  
                         </div>
                     </div>
                         <div class="projects-data">
                             <div class="project project2" id="2">
                                 <h1>Student Management System</h1>
                                 <div class="img"><img src="projectImg\sms.png" alt=""></div>
-                                <button class="source-code">Source Code</button>
-                              <a href="" class="link">Open</a>  
+                                <a href="">Source Code</a>
+                          <a href="" class="link">Open</a>  
                             </div>
                         </div>
                     <div class="projects-data">
                         <div class="project project3" id="3">
                             <h1>Fruits</h1>
                             <div class="img"><img src="projectImg\fruits.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project4" id="4">
                             <h1>Parking Slot</h1>
                             <div class="img"><img src="projectImg\Parking.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project5" id="5">
                             <h1>Tik-Tak-Toe</h1>
                             <div class="img"><img src="projectImg\tiktaktoe.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project6" id="6">
                             <h1>Netflix</h1>
                             <div class="img"><img src="projectImg\mulan.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project7" id="7">
                             <h1>StarBucks</h1>
                             <div class="img"><img src="projectImg\starbuks.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project8" id="8">
                             <h1>Quote Machine</h1>
                             <div class="img"><img src="projectImg\quotemachine.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project9" id="9">
                             <h1>Amity</h1>
                             <div class="img"><img src="projectImg\amity.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project10" id="10">
                             <h1>Documentation</h1>
                             <div class="img"><img src="projectImg\documentation.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div>
@@ -335,7 +335,7 @@
                         <div class="project project11" id="11">
                             <h1>NVIDIA</h1>
                             <div class="img"><img src="projectImg\nvidia.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div>
@@ -343,7 +343,7 @@
                         <div class="project project12" id="12">
                             <h1>Tribute</h1>
                             <div class="img"><img src="projectImg\tribute.png" alt=""></div>
-                            <button class="source-code">Source Code</button>
+                            <a href="">Source Code</a>
                           <a href="" class="link">Open</a>  
                         </div>
                     </div>
