--- a/index.html
+++ b/index.html
@@ -278,73 +278,73 @@
                         <div class="project project3" id="3">
                             <h1>Fruits</h1>
                             <div class="img"><img src="projectImg\fruits.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/Fruits">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/Fruits/" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project4" id="4">
                             <h1>Parking Slot</h1>
                             <div class="img"><img src="projectImg\Parking.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/Parking-slot-clone">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/Parking-slot-clone/" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project5" id="5">
                             <h1>Tik-Tak-Toe</h1>
                             <div class="img"><img src="projectImg\tiktaktoe.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/TIC-TAC-TOE">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/TIC-TAC-TOE/" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project6" id="6">
                             <h1>Netflix</h1>
                             <div class="img"><img src="projectImg\mulan.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/mulan">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/mulan/" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project7" id="7">
                             <h1>StarBucks</h1>
                             <div class="img"><img src="projectImg\starbuks.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/starbuck">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/starbuck/" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project8" id="8">
                             <h1>Quote Machine</h1>
                             <div class="img"><img src="projectImg\quotemachine.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/quotemachine">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/quotemachine/" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project9" id="9">
                             <h1>Amity</h1>
                             <div class="img"><img src="projectImg\amity.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/amity">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/amity/" class="link">Open</a>  
                         </div>
                     </div><div class="projects-data">
                         <div class="project project10" id="10">
                             <h1>Documentation</h1>
                             <div class="img"><img src="projectImg\documentation.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/documentation">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/documentation/" class="link">Open</a>  
                         </div>
                     </div>
                     <div class="projects-data">
                         <div class="project project11" id="11">
                             <h1>NVIDIA</h1>
                             <div class="img"><img src="projectImg\nvidia.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/product-landing-page">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/product-landing-page/" class="link">Open</a>  
                         </div>
                     </div>
                     <div class="projects-data">
                         <div class="project project12" id="12">
                             <h1>Tribute</h1>
                             <div class="img"><img src="projectImg\tribute.png" alt=""></div>
-                            <a href="">Source Code</a>
-                          <a href="" class="link">Open</a>  
+                            <a href="https://github.com/shashank-kumar-saxena/tribute">Source Code</a>
+                          <a href="https://shashank-kumar-saxena.github.io/tribute/" class="link">Open</a>  
                         </div>
                     </div>
                 </div>
