--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <h1>Student Management System</h1>
                             <div class="img"><img src="projectImg\sms.png" alt=""></div>
                             <a href="">Source Code</a>
-                            <a href="" class="link">Open</a>
+                            <a href="http://shsnk.atwebpages.com/" class="link">Open</a>
                         </div>
                     </div>
                     <div class="projects-data">
