Eduction Section reSuffle

--- a/index.html
+++ b/index.html
@@ -154,15 +154,27 @@
                             </div>
                         </div>
                         <div class="edu-data" id="edu-data">
-                            <div class="icsc">
+                            <div class="mca">
                                 <h6>
-                                    2014-2015
+                                    2021-2023
                                 </h6>
-                                <h3>Secondary School Certificate</h3>
-                                <h5>Board:Indian Certificate of Secondary Education(ICSC)</h5>
-                                <h5>School:Maharaja Agarsen Public School</h5>
-                                <h5>City:Moradabad(244001)</h5>
+                                <h3>Master's of Computer Application</h3>
+                                <h5>University:Dr. A.P.J. Abdul Kalam Technical University</h5>
+                                <h5>Institute:KIET Group Of Institute</h5>
+                                <h5>City:Ghaziabad(201206)</h5>
                             </div>
+                            <div class="empty"> </div>
+                            <div class="empty"> </div>
+                            <div class="bca">
+                                <h6>
+                                    2017-2020
+                                </h6>
+                                <h3>Bachlore's of Computer Application</h3>
+                                <h5>University:Chaudhary Charan Singh</h5>
+                                <h5>Institute:HR Institute of Science and Technology</h5>
+                                <h5>City:Ghaziabad(201206)</h5>
+                            </div>
+
                             <div class="empty"> </div>
                             <div class="empty"> </div>
                             <div class="isc">
@@ -174,25 +186,17 @@
                                 <h5>School:Maharaja Agarsen Public School</h5>
                                 <h5>City:Moradabad(244001)</h5>
                             </div>
-                            <div class="bca">
-                                <h6>
-                                    2017-2020
-                                </h6>
-                                <h3>Bachlore's of Computer Application</h3>
-                                <h5>University:Chaudhary Charan Singh</h5>
-                                <h5>Institute:HR Institute of Science and Technology</h5>
-                                <h5>City:Ghaziabad(201206)</h5>
-                            </div>
+
                             <div class="empty"> </div>
                             <div class="empty"> </div>
-                            <div class="mca">
+                            <div class="icsc">
                                 <h6>
-                                    2021-2023
+                                    2014-2015
                                 </h6>
-                                <h3>Master's of Computer Application</h3>
-                                <h5>University:Dr. A.P.J. Abdul Kalam Technical University</h5>
-                                <h5>Institute:XYZ</h5>
-                                <h5>City:Ghaziabad(201206)</h5>
+                                <h3>Secondary School Certificate</h3>
+                                <h5>Board:Indian Certificate of Secondary Education(ICSC)</h5>
+                                <h5>School:Maharaja Agarsen Public School</h5>
+                                <h5>City:Moradabad(244001)</h5>
                             </div>
                         </div>
                     </div>
