comments on index page  , certification portion and other minor improvements added

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 
 <body class="body1" id="body">
     <div class="container-fluid">
+        <!--################## Menu item #####################-->
         <div class="row Menu" id="Menubar">
             <div id="Menu-itmes">
                 <div class="column" id="home"><span>Home</span></div><br>
                 <div class="column" id="about"><span>About</span></div><br>
                 <div class="column" id="contact"><span>Contact</span></div><br>
                 <div class="column" id="portfolio"><span>Web Projects</span></div><br>
-                <div class="column" id="services"><span>App Projects</span></div><br>
+                <div class="column" id="services"><span>Certificates</span></div><br>
             </div>
         </div>
+        <!--##################### Background animation ####################-->
         <div class="row back-items">
             <div class="row spinner" id="spinner"><i class="fas fa-circle-notch"></i></div>
             <div class="row square"><i class="far fa-square"></i></i></div>
@@ -31,6 +33,7 @@
                 </div>
             </div>
         </div>
+        <!--##################### Home Section #####################-->
         <div class="main" id='main'>
             <div class="row header">
                 <div class="offset-1"></div>
@@ -57,6 +60,7 @@
                 <div class="offset-1"></div>
             </div>
         </div>
+        <!-- ################## About Section ###################-->
         <div class="about-page" id="about-page">
             <div class="row header">
                 <div class="offset-1"></div>
@@ -204,6 +208,7 @@
                 </div>
             </div>
         </div>
+        <!-- ################# Contact Section ################-->
         <div class="contact-page" id="contact-page">
             <div class="row header">
                 <div class="offset-1"></div>
@@ -246,6 +251,7 @@
 
 
         </div>
+        <!-- ################ Web Projects Section ###############-->
         <div class="work" id="work">
             <div class="row header">
                 <div class="offset-1"></div>
@@ -371,6 +377,16 @@
                 </div>
                 <div class="offset-1"></div>
             </div>
+        </div>
+        <!--################# Certification Section ##############-->
+        <div class="certificate" id="certificate">
+            <div class="row header">
+                <div class="offset-1"></div>
+                <div class="col-1 mr-auto logo"><span>S</span></div>
+                <div class="col-1 Menu-bar"><span><i class="fas fa-bars"></i></span></div>
+                <div class="offset-1"></div>
+            </div>
+            <div class="row"></div>
         </div>
     </div>
 </body>
