--- a/index.html
+++ b/index.html
@@ -386,8 +386,24 @@
                 <div class="col-1 Menu-bar"><span><i class="fas fa-bars"></i></span></div>
                 <div class="offset-1"></div>
             </div>
-            <div class="row"></div>
+            <div class="row title">
+                <div class="offset-1"></div>
+                <div class="col">
+                    <h1 style="text-align: center"><u>Certificates</u></h1>
+                </div>
+                <div class="offset-1"></div>
+            </div>
+            <div class="row block">
+                <div class="col inside-block">
+                    <div class="left-btn btn"><i class="fa fa-arrow-left" aria-hidden="true"></i></div>
+                    <div class="content">
+                        <img src="certificates/1.png" alt="">
+                    </div>
+                    <div class="right-btn btn"><i class="fa fa-arrow-left" aria-hidden="true"></i></div>
+                </div>
+            </div>
         </div>
+    </div>
     </div>
 </body>
 
