--- a/index.html
+++ b/index.html
@@ -395,11 +395,11 @@
             </div>
             <div class="row block">
                 <div class="col inside-block">
-                    <div class="left-btn btn"><i class="fa fa-arrow-left" aria-hidden="true"></i></div>
-                    <div class="content">
-                        <img src="certificates/1.png" alt="">
+                    <div class="left-btn btn" id="leftBtn"><i class="fa fa-arrow-left" aria-hidden="true"></i></div>
+                    <div class="content" id="content">
+                        <img src="certificates/DataStructure.png" alt="">
                     </div>
-                    <div class="right-btn btn"><i class="fa fa-arrow-left" aria-hidden="true"></i></div>
+                    <div class="right-btn btn" id="rightBtn"><i class="fa fa-arrow-left" aria-hidden="true"></i></div>
                 </div>
             </div>
         </div>
